--- a/curriculo.html
+++ b/curriculo.html
@@ -3,8 +3,8 @@
 <h1>CURRICULO</h1>
 <head><title>MEU CURRICULO</title>
 </head>
-<body><b>MARCELO HENRIQUE DE PALUA OLIVEIRA</b><br>brasileiro,casado, 32 anos,casado.<br>Contato: 81 9999.9999 <br> Email: marcelohenriq.dev@outlook.com<br>
-Endereço: Av. Califórnia, Q.34, bl.7, apt.101, Ipojuca-PE</body>
+<body><b>MARCELO HENRIQUE DE PALUA OLIVEIRA</b><br>brasileiro,casado, 33 anos,casado.<br>Contato: 81 9999.9999 <br> Email: marcelohenriq.dev@outlook.com<br>
+Endereço: Rua Ventura, Q.34, bl.7, apt.101, Ipojuca-PE</body>
 
 
 
@@ -14,8 +14,9 @@ Endereço: Av. Califórnia, Q.34, bl.7, apt.101, Ipojuca-PE</body>
 
 <h3>FORMAÇÕES</h3>
 
-<li> Técnico em Desenvolvimento de sistemas (ETE)- Cursando.</li>
-<li>Técnico em Eletromecânica - Senai-PE.</li>
+<li> Graduação em Análise e Desenvolvimento de Sistemas - UNIFBV - 06/2024 - Cursando. </li>
+<li> Técnico em Desenvolvimento de sistemas (ETE)- 06/2023 - 12/2024.</li>
+<li> Mecânica de Manutenção - Senai-PE.</li>
 
 <p><strong>ESCOLARIDADE</strong></p>
 
@@ -27,7 +28,7 @@ Endereço: Av. Califórnia, Q.34, bl.7, apt.101, Ipojuca-PE</body>
 
 <li><b>Empresa:</b> Terphane Ltda.</li>
 <li><b>Função:</b> Operador de Fabricação IIB</li>
-<li><b>Período:</b> 02/06/2016 até o presente momento. </li>
+<li><b>Período:</b> 02/06/2016 - 12/02/2025. </li>
 <br>
 
 
